# bip375-examples

./: .gitignore  GETTING_STARTED.md  README.md  REFERENCE.md  bip375_test_vectors.json  test_vectors.json
go/: README.md  bip375_test.go  go.mod  go.sum
go/sp/: analysis_test.go  proofs.go  signer.go
python/: dleq_374.py  requirements.txt
python/examples/hardware-signer/: README.md  hardware_wallet_flow.py  hw_device.py  shared_hw_utils.py  wallet_coordinator.py
python/examples/multi-signer/: README.md  alice_creates.py  bob_signs.py  charlie_finalizes.py  shared_utils.py
python/psbt_sp/: __init__.py  bip352_crypto.py  constants.py  crypto.py  inputs.py  psbt.py  psbt_io.py  psbt_utils.py  roles.py  serialization.py
python/tests/: test_generator.py  validate_tests_examples.py
python/tests/test_configs/invalid/: 3.multi_scan_key_errors.yaml  4.ecdh_coverage_errors.yaml
python/tests/test_configs/valid/: 1.incomplete_ecdh.yaml  2.large_psbt.yaml  5.same_scan_key.yaml  6.single_signer.yaml
rust/: Cargo.toml  README.md  justfile
rust/.cargo/: config.toml
rust/crates/bip375-core/: Cargo.toml
rust/crates/bip375-core/src/: constants.rs  ecdh_aggregation.rs  error.rs  extensions.rs  field.rs  lib.rs  psbt.rs  psbt_accessors.rs  shares.rs  types.rs
rust/crates/bip375-crypto/: Cargo.toml
rust/crates/bip375-crypto/src/: bip352.rs  dleq.rs  error.rs  lib.rs  signing.rs
rust/crates/bip375-gui-common/: Cargo.toml
rust/crates/bip375-gui-common/src/: display_adapter.rs  display_formatting.rs  field_identifier.rs  lib.rs  psbt_analyzer.rs  psbt_display_ext.rs  psbt_io.rs
rust/crates/bip375-helpers/: Cargo.toml
rust/crates/bip375-helpers/src/: gui.rs  hrn_ext.rs  lib.rs
rust/crates/bip375-helpers/src/display/: adapter.rs  field_identifier.rs  formatting.rs  mod.rs  psbt_analyzer.rs  psbt_extension.rs  psbt_io.rs
rust/crates/bip375-helpers/src/io/: error.rs  file_io.rs  metadata.rs
rust/crates/bip375-helpers/src/transaction/: assignment.rs  mod.rs
rust/crates/bip375-helpers/src/wallet/: mod.rs  multi_party.rs  types.rs
rust/crates/bip375-io/: Cargo.toml
rust/crates/bip375-io/src/: error.rs  file_io.rs  lib.rs  metadata.rs
rust/crates/bip375-roles/: Cargo.toml
rust/crates/bip375-roles/src/: constructor.rs  creator.rs  extractor.rs  input_finalizer.rs  lib.rs  signer.rs  sp_spender.rs  updater.rs  validation.rs
rust/crates/bip375-uniffi/: Cargo.toml  README.md  build.rs  pyproject.toml
rust/crates/bip375-uniffi/examples/: simple_example.py
rust/crates/bip375-uniffi/src/: aggregation.rs  bip375.udl  crypto.rs  errors.rs  file_io.rs  lib.rs  roles.rs  types.rs
rust/crates/bip375-uniffi/tests/: test_basic.py
rust/crates/spdk-uniffi/: Cargo.toml  README.md  pyproject.toml
rust/crates/spdk-uniffi/examples/: simple_example.py
rust/crates/spdk-uniffi/src/: crypto.rs  errors.rs  lib.rs  spdk_psbt.udl  types.rs
rust/crates/spdk-uniffi/tests/: test_basic.py
rust/examples/common/: Cargo.toml
rust/examples/common/src/: lib.rs
rust/examples/hardware-signer/: Cargo.toml  build.rs
rust/examples/hardware-signer/src/: attack_mode.rs  hw_device.rs  lib.rs  main.rs  shared_utils.rs  wallet_coordinator.rs
rust/examples/hardware-signer/src/gui/: app_state.rs  main.rs  mod.rs  workflow_orchestrator.rs
rust/examples/hardware-signer/ui/: app.slint  utxo_selector.slint
rust/examples/multi-signer/: Cargo.toml  README.md
rust/examples/multi-signer/src/: alice_creates.rs  bob_signs.rs  charlie_finalizes.rs  lib.rs  main.rs  shared_utils.rs  workflow_actions.rs
rust/examples/multi-signer/src/cli/: menu.rs  mod.rs
rust/examples/multi-signer/src/core/: app_state.rs  mod.rs  workflow_orchestrator.rs
rust/examples/multi-signer/src/gui/: app_state.rs  mod.rs  workflow_orchestrator.rs
rust/examples/multi-signer/ui/: app.slint  party_config_dialog.slint
rust/examples/musig2-signer/: Cargo.toml  README.md
rust/examples/musig2-signer/src/: lib.rs  main.rs  recipients.rs  workflow.rs
rust/examples/musig2-signer/src/core/: app_state.rs  mod.rs  orchestrator.rs
rust/examples/musig2-signer/src/gui/: mod.rs
rust/examples/musig2-signer/ui/: app.slint
rust/examples/sidecar-multisig/: Cargo.toml
rust/examples/sidecar-multisig/src/: main.rs  p2wsh.rs
rust/tests/: test_vectors.rs
rust/tools/psbt-viewer/: Cargo.toml
rust/tools/psbt-viewer/src/: main.rs  resources.rs  test_vector_helper.rs
rust/tools/psbt-viewer/ui/: app.slint
