[package]
name = "bip375-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[dependencies]
bip375-core.workspace = true
bip375-crypto.workspace = true
bip375-io.workspace = true
bip375-roles.workspace = true
secp256k1.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
base64.workspace = true

[workspace]
resolver = "2"
members = [
    "crates/bip375-core",
    "crates/bip375-crypto",
    "crates/bip375-helpers",
    "crates/bip375-io",
    "crates/bip375-roles",
    "crates/bip375-uniffi",
    "examples/hardware-signer",
    "examples/multi-signer",
    "tools/psbt-viewer",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["BIP-375 Contributors"]
repository = "https://github.com/bitcoin/bips"

[workspace.dependencies]
bitcoin = "0.32.6"
secp256k1 = { version = "0.29", features = ["rand", "global-context", "serde"] }
psbt-v2 = { git = "https://github.com/tcharding/rust-psbt", features = ["silent-payments"] }

# Cryptography
bitcoin_hashes = "0.13"
hmac = "0.12"
sha2 = "0.10"
ripemd = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# BIP-353 (Human-Readable Bitcoin Addresses) with DNSSEC validation
bip353-rs = "0.1.1"
dnssec-prover = { version = "0.6", features = ["std", "tokio", "validation"] }

# Async runtime for BIP-353 resolution
tokio = { version = "1", features = ["rt", "macros", "net"] }

# Internal crates
bip375-core = { path = "crates/bip375-core" }
bip375-crypto = { path = "crates/bip375-crypto" }
bip375-helpers = { path = "crates/bip375-helpers" }
bip375-io = { path = "crates/bip375-io" }
bip375-roles = { path = "crates/bip375-roles" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[workspace.lints.clippy]
unwrap_used = { level = "deny", priority = 1 }
expect_used = "allow"

# Allow unwrap in generated code
[package.metadata.clippy]
allow-unwrap-in-tests = true