[package]
name = "bip375-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[dependencies]
base64.workspace = true
hex.workspace = true
secp256k1.workspace = true
serde.workspace = true
serde_json.workspace = true
spdk-core.workspace = true

[workspace]
resolver = "2"
members = [
    "crates/bip375-helpers",
    "crates/spdk-uniffi",
    "examples/hardware-signer",
    "examples/multi-signer",
    "examples/musig2-signer",
    "tools/psbt-viewer",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["BIP-375 Contributors"]
repository = "https://github.com/bitcoin/bips"

[workspace.dependencies]
bitcoin = "0.32.6"
musig2 = { version = "0.3.1", features = ["secp256k1"] }
secp256k1 = { version = "0.29", features = ["rand", "global-context", "serde"] }
sha2 = "0.10"
spdk-core = { path = "/Users/ron/src/spdk/spdk-core" }
#spdk-core = { git = "https://github.com/macgyver13/spdk.git", branch = "bip375-updates-rev2" }
silentpayments = { path = "/Users/ron/src/spdk/silentpayments" }
#silentpayments = { git = "https://github.com/macgyver13/spdk.git", branch = "bip375-updates-rev2" }

# Serialization
base64 = "0.21"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# BIP-353 (Human-Readable Bitcoin Addresses) with DNSSEC validation
dnssec-prover = { version = "0.6", features = ["std", "tokio", "validation"] }
tokio = { version = "1", features = ["rt", "macros", "net"] }

# Internal crates
bip375-helpers = { path = "crates/bip375-helpers" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[workspace.lints.clippy]
unwrap_used = { level = "deny", priority = 1 }
expect_used = "allow"

# Allow unwrap in generated code
[package.metadata.clippy]
allow-unwrap-in-tests = true