[package]
name = "bip375-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
bitcoin.workspace = true
secp256k1.workspace = true
serde.workspace = true
silentpayments.workspace = true
thiserror.workspace = true
hex.workspace = true
spdk-core.workspace = true

[dev-dependencies]
serde_json.workspace = true
