[package]
name = "bip375-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
bitcoin.workspace = true
bitcoin_hashes.workspace = true
secp256k1.workspace = true
hmac.workspace = true
sha2.workspace = true
ripemd.workspace = true
thiserror.workspace = true
hex.workspace = true

[dev-dependencies]
serde_json.workspace = true
