[package]
name = "bip375-gui-common"
version.workspace = true
edition.workspace = true

[dependencies]
bip375-core.workspace = true
bip375-io.workspace = true
bitcoin.workspace = true
psbt-v2.workspace = true
hex.workspace = true
base64 = "0.22"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

# BIP-353 support for DNSSEC proof validation
bip353-rs.workspace = true
dnssec-prover.workspace = true
tokio.workspace = true
