[package]
name = "bip375-helpers"
version = "0.1.0"
edition = "2021"

[dependencies]
bip375-core.workspace = true
bip375-crypto.workspace = true
bip375-io.workspace = true
base64.workspace = true
bitcoin.workspace = true
dnssec-prover.workspace = true
hex.workspace = true
psbt-v2.workspace = true
secp256k1.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true