[package]
name = "bip375-helpers"
version = "0.1.0"
edition = "2021"

[dependencies]
base64.workspace = true
bip39 = "2.0"
bitcoin.workspace = true
dnssec-prover.workspace = true
hex.workspace = true
rfd = "0.15"
secp256k1.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
silentpayments.workspace = true
spdk-core.workspace = true