[package]
name = "bip375-io"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
bip375-core.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
base64.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3.8"
