[package]
name = "bip375-uniffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "bip375"

[dependencies]
# Local crates
bip375-core = { path = "../bip375-core" }
bip375-crypto = { path = "../bip375-crypto" }
bip375-io = { path = "../bip375-io" }
bip375-roles = { path = "../bip375-roles" }

# Bitcoin
bitcoin = "0.31"
secp256k1 = { version = "0.28", features = ["global-context"] }

# UniFFI
uniffi = { version = "0.28", features = ["build"] }

# Serialization
hex = "0.4"

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }

[dev-dependencies]
uniffi = { version = "0.28", features = ["bindgen-tests"] }
