[package]
name = "spdk-uniffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "spdk_psbt"

[dependencies]
# Bitcoin
bitcoin.workspace = true
secp256k1.workspace = true
silentpayments.workspace = true
spdk-core.workspace = true

# UniFFI
uniffi = { version = "0.28", features = ["build"] }

# Serialization
hex = "0.4"

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }

[dev-dependencies]
uniffi = { version = "0.28", features = ["bindgen-tests"] }
