[package]
name = "multi-signer"
version.workspace = true
edition.workspace = true
license.workspace = true
default-run = "multi-signer"

[features]
default = []
gui = ["slint","slint-build"]

[[bin]]
name = "alice-creates"
path = "src/bin/alice-creates.rs"

[[bin]]
name = "bob-signs"
path = "src/bin/bob-signs.rs"

[[bin]]
name = "charlie-finalizes"
path = "src/bin/charlie-finalizes.rs"

[[bin]]
name = "multi-signer"
path = "src/main.rs"
required-features = ["gui"]

[dependencies]
bip375-core.workspace = true
bip375-crypto.workspace = true
bip375-gui-common.workspace = true
bip375-io.workspace = true
bip375-roles.workspace = true
bitcoin.workspace = true
secp256k1.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
sha2.workspace = true
ripemd.workspace = true
chrono.workspace = true
common = { path = "../common" }

# GUI framework
slint = { version = "1.8", optional = true }

[build-dependencies]
slint-build = { version = "1.8", optional = true }

[package.metadata.bundle.bin.multi-signer]
name = "Multi Signer Demo"
identifier = "xyz.spmac.multisigner"
version = "0.1.0"

[package.metadata.clippy]
# Slint generates code with unwrap, allow it
msrv = "1.70"